--- a/flexExercises/05-flex-modal/styles.css
+++ b/flexExercises/05-flex-modal/styles.css
@@ -22,6 +22,7 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   padding: 15px;
   flex-shrink: 0;
+  min-width: 480px;
 }
 
 .header-container{
@@ -30,7 +31,7 @@ body {
 
 .header{
     font-weight: bold;
-    font-size: larger;
+    font-size: 23px;
     margin-left: 15px;
     
 }
@@ -47,8 +48,8 @@ body {
 
 .button-container{
     
-    padding-left: 60px;
-    padding-top: 10px;
+    padding-left: 57px;
+    padding-top: 15px;
 }
 
 
